# dev_noe

./: .gitmodules
mc_dev/manimani/dynamixel/dynamixel_tester/: CMakeLists.txt  README.md  package.xml
mc_dev/manimani/dynamixel/dynamixel_tester/config/: joint_2_0.yaml  mimi_motor.yaml
mc_dev/manimani/dynamixel/dynamixel_tester/launch/: dynamixel_controllers.launch
mc_dev/manimani/dynamixel/dynamixel_tester/src/: by_topic.py  converter.py
mc_dev/manimani/dynamixel/memo_manipulation/dynamixel_controller/param/: mimi_specification.yaml
mc_dev/manimani/dynamixel/memo_manipulation/dynamixel_controller/src/: motor_controller.py  (+3 more)
mc_dev/manimani/dynamixel/memo_manipulation/memo_manipulation/: CMakeLists.txt  package.xml
mc_dev/manimani/mani_reco_test/mani_gp_test/: CMakeLists.txt  package.xml
mc_dev/manimani/wh_dyna_motor/: CMakeLists.txt  package.xml
mc_dev/pc_dev/open3d_1/: CMakeLists.txt  package.xml
mc_dev/robot_apps/navi_c/: CMakeLists.txt  package.xml
micon_dev/arduino/washiduino/: CMakeLists.txt  package.xml
micon_dev/arduino_washi/: CMakeLists.txt  package.xml
micon_dev/esp32_dk_v4/: CMakeLists.txt  package.xml
micon_dev/esp32_dk_v4/pio/: platformio.ini
micon_dev/esp32_dk_v4/pio/test/esp_eye_mg996r/: esp_eyemg996r.ino
wh_func1/everyweek_noe/yaml_cpp_tes/: CMakeLists.txt  package.xml
wh_func1/everyweek_noe/yaml_cpp_tes/config/: config.yml
wh_func1/everyweek_noe/yaml_cpp_tes/launch/: config_test.launch
wh_func1/everyweek_noe/yaml_cpp_tes/src/: param_display.cpp
wh_func1/everyweek_noe/yaml_cpp_tes/src/test/: yaml_cpp_test_2.cpp
(+4 files in other folders)
